# axum-blocking-example

./: Cargo.toml
src/: main.rs
